--- a/app/presentation/views_html/view.slim
+++ b/app/presentation/views_html/view.slim
@@ -41,6 +41,10 @@
     a href="#{view.urls}" View 
 .view-pic 
   img src="#{view.urls}"
+.hidden 
+  #topic_id value="#{view.topics}"
+  / #topic_id value="#{view.view_id}"
+
 .footer.poa-footer 
   .copyright 
     - if !is_saved
