--- a/app/presentation/views_html/focus.slim
+++ b/app/presentation/views_html/focus.slim
@@ -1,14 +1,43 @@
-.service-logo.poa-header 
-  a href="/"
-    .sv-light Light 
-    .sv-of of 
-    .sv-day Day
-- focus_data.each do |focus|
-  ul 
-    li #{focus.id}
-    li #{focus.ssid}
-    li #{focus.uuid}
-    li #{focus.rest_time}
-    li #{focus.work_time}
-    li #{focus.date}
+.header
+  .service-logo
+    a[href="/"]
+    .sv-light
+      | Light
+    .sv-of
+      | of
+    .sv-day
+      | Day
+  .menu
+    .menuitem
+      a[href="/"]
+        |  topic 
+    .menuitem.active
+      a[href="/"]
+        |  favorite 
+  .clear
+.focus-set
+  .focus-card
+    .focus-date
+      | Date
+    .focus-time
+      | Work Time
+    .rest-time
+      | Rest Time
+  - focus_data.each do |focus|
+    .focus-card
+      .focus-date
+        i.fa-regular.fa-calendar
+        |  #{focus.date}
+      .focus-time
+        | #{focus.work_time} mins
+      .rest-time
+        | #{focus.rest_time} mins
+/ - focus_data.each do |focus|
+/   ul 
+/     li #{focus.id}
+/     li #{focus.ssid}
+/     li #{focus.uuid}
+/     li #{focus.rest_time}
+/     li #{focus.work_time}
+/     li #{focus.date}
       
