--- a/app/presentation/views_html/favoritelist.slim
+++ b/app/presentation/views_html/favoritelist.slim
@@ -9,6 +9,8 @@
       a href="/"  topic
     .menuitem.active
       a href="/favorite-list"  favorite
+    .menuitem
+      a href="/focus"  focus
   .clear
 
 .favorite-lists.container
