--- a/app/presentation/views_html/focus.slim
+++ b/app/presentation/views_html/focus.slim
@@ -9,11 +9,11 @@
       | Day
   .menu
     .menuitem
-      a[href="/"]
-        |  topic 
+      a href="/"  topic
+    .menuitem
+      a href="/favorite-list"  favorite
     .menuitem.active
-      a[href="/"]
-        |  favorite 
+      a href="/focus"  focus
   .clear
 .focus-set
   .focus-card
