--- a/app/presentation/views_html/picktopic.slim
+++ b/app/presentation/views_html/picktopic.slim
@@ -9,6 +9,8 @@
       a href="/"  topic
     .menuitem
       a href="/favorite-list"  favorite
+    .menuitem
+      a href="/focus"  focus
     .clear
   .topic-choose-title Pick a Topic
 
