update view object

--- a/app/presentation/views_html/focus.slim
+++ b/app/presentation/views_html/focus.slim
@@ -23,7 +23,8 @@
       | Total Work Time
     .rest-time
       | Total Rest Time
-  - focus_data.each do |focus|
+  / - focus_data.each do |focus|
+  - view_focus.each do |focus|
     .focus-card
       .focus-date
         i.fa-regular.fa-calendar
