--- a/app/presentation/views_html/focus.slim
+++ b/app/presentation/views_html/focus.slim
@@ -16,6 +16,8 @@
       a href="/focus"  focus
   .clear
 .focus-set
+  .chart
+    canvas#example[width="200px" height="50px"]
   .focus-card
     .focus-date
       | Date
