--- a/app/presentation/assets/css/style.css
+++ b/app/presentation/assets/css/style.css
@@ -851,3 +851,10 @@ input[type="submit"]{
 .focus-card:nth-child(1) .rest-time{
   color: rgb(255, 255, 255);
 } */
+
+.focus-set .chart{
+  background: #000;
+  padding: 10px 5px;
+  border-radius: 10px;
+
+}
