--- a/app/presentation/views_html/layout.slim
+++ b/app/presentation/views_html/layout.slim
@@ -27,6 +27,10 @@ html
       src="https://kit.fontawesome.com/39462816da.js" 
       crossorigin="anonymous"
     }
+    script {
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" 
+      crossorigin="anonymous"
+    }
     section
       include :flash_bar
       == yield
